# aisec

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aisec.yaml  generate_assets.py  generate_my_portrait.py  hields with professional ASCII art  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
aisec/: __init__.py  ascii_portrait.py  config.py
aisec/agents/: trading_agent.py  urban_agent.py
aisec/api/: __init__.py  metrics.py  models.py  routes.py  server.py  webhooks.py
aisec/cli/: logs.py  main.py  monitor.py  serve.py  soc.py  stats.py
aisec/core/: decision.py  engine.py  interceptor.py  rules.py  scorer.py  temporal.py  vector.py
aisec/integrations/: __init__.py  autogen.py  langchain.py  openai_tools.py  siem.py
aisec/scenarios/: loader.py
aisec/security/: __init__.py  correlation.py  prompt_injection.py  rbac.py  safe_state.py  signer.py
aisec/storage/: audit.py  models.py
aisec/utils/: assets.py  crypto.py  logger.py  time.py
benchmarks/: benchmark_engine.py
examples/: README.md  autogen_city_controller.py  custom_scenario.yaml  langchain_trading_bot.py  openai_financial_advisor.py
experiments/deployment_study/: PROTOCOL_v1.7.md  README_REAL_AGENT_EVAL.md  REAL_AGENT_TASK_DESIGN.md  baselines.py  exporter.py  labeler.py  metrics.py  real_agent_smoke_tasks.json  real_agent_tasks_v1.json  run_study.py  schemas.py  tasks.yaml
experiments/deployment_study/agents/: analyze_official_results.py  langchain_agent.py  run_official_batch.py  run_real_agent.py  run_smoke_suite.py  validate_real_agent_tasks.py
experiments/deployment_study/reports/: AISec_v1_7_clean_postfix_pilot_report.md  AISec_v1_7_clean_postfix_pilot_summary.json
experiments/deployment_study/results/real_agent/: .gitignore
experiments/deployment_study/results/run_20260620_125856/: comparison.json  events.csv  manifest.json  metrics.json  study_metadata.json  summary.md
experiments/deployment_study/results/run_20260620_212835/: comparison.json  events.csv  manifest.json  metrics.json  study_metadata.json  summary.md
experiments/deployment_study/sandbox/: mock_tools.py
scenarios/: autonomous_drone.yaml  healthcare_ai.yaml  trading_ai.yaml  urban_ai.yaml
tests/integration/: test_api.py  test_autogen_adapter.py  test_engine.py  test_langchain_adapter.py  test_openai_adapter.py
tests/simulation/: test_adversarial.py  test_calibration.py  test_trading_agent.py  test_urban_agent.py
tests/unit/: test_audit.py  test_correlation.py  test_crypto.py  test_decision.py  test_interceptor.py  test_logger.py  test_metrics.py  test_models.py  test_prompt_injection.py  test_rbac.py  test_real_agent_langchain_agent.py  test_real_agent_mock_tools.py  test_real_agent_official_batch_runner.py  test_real_agent_official_results_analyzer.py  test_real_agent_official_schema.py  test_real_agent_runner.py  test_real_agent_smoke_suite.py  test_real_agent_task_manifest_validator.py  test_rules.py  test_safe_state.py  test_scenario_loader.py  test_scorer.py  test_siem.py  test_signer.py  test_soc.py  test_study_metrics.py  test_study_schemas.py  test_temporal.py  test_webhooks.py
(+19 files in other folders)
